[tool.poetry]
name = "unchat"
version = "0.1.0"
description = ""
authors = ["xMsid <32135119+xmsid@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
